adwords api - upgrade from 201702 to 201710

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -392,13 +392,8 @@
     -->
     <!--
     <add key="OAuth2Mode" value="SERVICE_ACCOUNT" />
-    <add key="OAuth2ServiceAccountEmail"
-        value="INSERT_OAUTH2_SERVICE_ACCOUNT_EMAIL_HERE" />
     <add key="OAuth2PrnEmail" value="INSERT_OAUTH2_USER_EMAIL_HERE" />
-    <add key="OAuth2JwtCertificatePath"
-        value="INSERT_OAUTH2_JWT_CERTIFICATE_PATH_HERE" />
-    <add key="OAuth2JwtCertificatePassword"
-        value="INSERT_OAUTH2_JWT_CERTIFICATE_PASSWORD_HERE" />
+    <add key="OAuth2SecretsJsonPath" value="INSERT_OAUTH2_SECRETS_JSON_FILE_PATH_HERE" />
     -->
 
     <!-- Settings specific to use ClientLogin as authentication mechanism. -->
