--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -64,9 +64,7 @@
       <endpoint address="https://adcenterapi.microsoft.com/Api/Advertiser/V8/Reporting/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="Reporting.IReportingService" name="BasicHttpBinding_IReportingService" />
     </client>
   </system.serviceModel>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-  </startup>
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -85,11 +83,7 @@
       </providers>
     </roleManager>
     
-  <webServices>
-      <soapExtensionTypes>
-        <add type="Google.Api.Ads.Common.Lib.SoapListenerExtension, Google.Ads.Common" priority="1" group="0" />
-      </soapExtensionTypes>
-    </webServices></system.web>
+  </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -135,15 +129,7 @@
     </assemblyBinding>
   </runtime>
   <AdWordsApi>
-    
-    
-    
-    
-    
-    
-    
-    
-    
+
     <!--
       This section contains the settings specific to AdWords and DoubleClick Ad
       Exchange Buyer API DotNet Client Library. You can use the App.config /
@@ -208,32 +194,10 @@
     <add key="Email" value="aaron@directagents.com"/>
     <add key="Password" value="Welcome2010"/>
     -->
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+
   <!-- Settings related to general library behaviour. --><!-- Use this key to automatically retry a call that failed due to a
          recoverable error like expired credentials. --><!-- <add key="RetryCount" value="1" /> --><!-- Set the service timeout in milliseconds. --><!-- <add key="Timeout" value="100000" /> --><!-- Use this key to enable or disable gzip compression in SOAP requests.--><!-- Set this flag to true to include the list of client library utilities
-         that your code uses in the user agent string.--><add key="MaskCredentials" value="true" /><add key="EnableSoapExtension" value="true" /><add key="EnableGzipCompression" value="true" /><add key="IncludeUtilitiesInUserAgent" value="true" /><add key="ProxyServer" value="" /><add key="ProxyUser" value="" /><add key="ProxyPassword" value="" /><add key="ProxyDomain" value="" /><add key="DeveloperToken" value="INSERT_YOUR_DEVELOPER_TOKEN_HERE" /><add key="ClientCustomerId" value="INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE" /><add key="SkipReportHeader" value="false" /><add key="SkipReportSummary" value="false" /><add key="SkipColumnHeader" value="false" /><add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" /><add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" /><add key="OAuth2Mode" value="APPLICATION" /><add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" /><!-- Optional: Specify an OAuth2 redirect url if you are building a
+         that your code uses in the user agent string.--><add key="MaskCredentials" value="true" /><add key="EnableGzipCompression" value="true" /><add key="IncludeUtilitiesInUserAgent" value="true" /><add key="ProxyServer" value="" /><add key="ProxyUser" value="" /><add key="ProxyPassword" value="" /><add key="ProxyDomain" value="" /><add key="DeveloperToken" value="INSERT_YOUR_DEVELOPER_TOKEN_HERE" /><add key="ClientCustomerId" value="INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE" /><add key="SkipReportHeader" value="false" /><add key="SkipReportSummary" value="false" /><add key="SkipColumnHeader" value="false" /><add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" /><add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" /><add key="OAuth2Mode" value="APPLICATION" /><add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" /><!-- Optional: Specify an OAuth2 redirect url if you are building a
          web application and implementing OAuth2 web flow in your application.
     --><!-- <add key="OAuth2RedirectUri" value="" /> --><!-- Use the following keys if you want to use OAuth2 service account flow.
          You should comment out all the keys for Web / Installed application
@@ -245,16 +209,8 @@
     <add key="OAuth2Mode" value="SERVICE_ACCOUNT" />
     <add key="OAuth2PrnEmail" value="INSERT_OAUTH2_USER_EMAIL_HERE" />
     <add key="OAuth2SecretsJsonPath" value="INSERT_OAUTH2_SECRETS_JSON_FILE_PATH_HERE" />
-    --><!-- The following keys are deprecated, use OAuth2SecretsJsonPath instead.--><!--
-    <add key="OAuth2ServiceAccountEmail"
-        value="INSERT_OAUTH2_SERVICE_ACCOUNT_EMAIL_HERE" />
-    <add key="OAuth2JwtCertificatePath"
-        value="INSERT_OAUTH2_JWT_CERTIFICATE_PATH_HERE" />
-    <add key="OAuth2JwtCertificatePassword"
-        value="INSERT_OAUTH2_JWT_CERTIFICATE_PASSWORD_HERE" />
     --></AdWordsApi>
-  
-  
+
 <system.net>
     <settings>
       <httpWebRequest maximumErrorResponseLength="-1" />
@@ -268,17 +224,23 @@
       </source>
       <source name="AdsClientLibs.DetailedRequestLogs" switchName="AdsClientLibs.DetailedRequestLogs" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
-          <!-- Modify the initializeData attribute below to control the
-                path to the detailed request log file. -->
-          <add name="detailedRequestLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Logs\AdWords\detailed_logs.log" />
+          <add name="detailedRequestLogListener" type="System.Diagnostics.ConsoleTraceListener" initializeData="true" />
+          <!-- Use the following to log to file. Modify the initializeData
+               attribute to control the path to the detailed request log file.
+          <add name="detailedRequestLogListener" type="System.Diagnostics.TextWriterTraceListener"
+               initializeData="C:\Logs\AdWords\detailed_logs.log"/>
+          -->
           <remove name="Default" />
         </listeners>
       </source>
       <source name="AdsClientLibs.SummaryRequestLogs" switchName="AdsClientLibs.SummaryRequestLogs" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
-          <!-- Modify the initializeData attribute below to control the
-                path to the summary request log file. -->
-          <add name="summaryRequestLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Logs\AdWords\summary_logs.log" />
+          <add name="summaryRequestLogListener" type="System.Diagnostics.ConsoleTraceListener" initializeData="true" />
+          <!-- Use the following to log to file. Modify the initializeData
+               attribute to control the path to the summary request log file.
+          <add name="summaryRequestLogListener" type="System.Diagnostics.TextWriterTraceListener"
+               initializeData="C:\Logs\AdWords\summary_logs.log"/>
+          -->
           <remove name="Default" />
         </listeners>
       </source>
@@ -300,4 +262,6 @@
       <add name="AdsClientLibs.SummaryRequestLogs" value="Off" />
     </switches>
     <trace autoflush="true" />
-  </system.diagnostics></configuration>
+  </system.diagnostics><startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup></configuration>
