--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -90,11 +90,13 @@
       <HintPath>..\..\ClientPortal.Web\packages\EPPlus.4.0.4\lib\net20\EPPlus.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Google.Ads.Common">
-      <HintPath>..\..\DirectAgents.Web\packages\Google.Ads.Common.4.0.0\lib\net452\Google.Ads.Common.dll</HintPath>
+    <Reference Include="Google.Ads.Common, Version=8.1.1.0, Culture=neutral, PublicKeyToken=52807268f2b614dc, processorArchitecture=MSIL">
+      <HintPath>..\..\DirectAgents.Web\packages\Google.Ads.Common.8.1.1\lib\net452\Google.Ads.Common.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Google.AdWords">
-      <HintPath>..\..\DirectAgents.Web\packages\Google.AdWords.19.1.0\lib\net452\Google.AdWords.dll</HintPath>
+    <Reference Include="Google.AdWords, Version=22.4.0.0, Culture=neutral, PublicKeyToken=52807268f2b614dc, processorArchitecture=MSIL">
+      <HintPath>..\..\DirectAgents.Web\packages\Google.AdWords.22.4.0\lib\net452\Google.AdWords.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Google.Apis, Version=1.8.2.23762, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
