--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -18,7 +18,8 @@
     <add name="ClientPortalProgContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <!--<add name="ClientPortalProgContext" connectionString="data source=173.204.123.91,1433;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
-    <add name="ClientPortalSearchContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalSearchContext" connectionString="data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="ClientPortalSearchContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="ClientPortalSearchContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
     <add name="RevTrackContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="SecurityEntities" connectionString="metadata=res://*/Entities.Security.SecurityModel.csdl|res://*/Entities.Security.SecurityModel.ssdl|res://*/Entities.Security.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -325,13 +326,8 @@
     -->
     <!--
     <add key="OAuth2Mode" value="SERVICE_ACCOUNT" />
-    <add key="OAuth2ServiceAccountEmail"
-        value="INSERT_OAUTH2_SERVICE_ACCOUNT_EMAIL_HERE" />
     <add key="OAuth2PrnEmail" value="INSERT_OAUTH2_USER_EMAIL_HERE" />
-    <add key="OAuth2JwtCertificatePath"
-        value="INSERT_OAUTH2_JWT_CERTIFICATE_PATH_HERE" />
-    <add key="OAuth2JwtCertificatePassword"
-        value="INSERT_OAUTH2_JWT_CERTIFICATE_PASSWORD_HERE" />
+    <add key="OAuth2SecretsJsonPath" value="INSERT_OAUTH2_SECRETS_JSON_FILE_PATH_HERE" />
     -->
     <!-- Settings specific to use ClientLogin as authentication mechanism. -->
     <!-- To use ClientLogin as authentication mechanism, uncomment the following
