--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -47,6 +47,7 @@
     <add key="SSRS_ReportServerUrl" value="" />
     <add key="SSRS_ReportServerUsername" value="" />
     <add key="SSRS_ReportServerPassword" value="" />
+    <add key="PATH_Search" value="C:\DA\portal\search" />
     <!-- APIs -->
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
     <add key="BingCustomerID" value="234647" />
