--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\..\..\1\DirectAgents.Domain\packages.config" />
   <repository path="..\..\API\AdRoll\packages.config" />
+  <repository path="..\..\API\Amazon\packages.config" />
   <repository path="..\..\API\Apple\packages.config" />
   <repository path="..\..\API\FacebookAPI\packages.config" />
   <repository path="..\..\API\Yahoo\packages.config" />
