--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -24,6 +24,8 @@
     <add name="RevTrackContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="SecurityEntities" connectionString="metadata=res://*/Entities.Security.SecurityModel.csdl|res://*/Entities.Security.SecurityModel.ssdl|res://*/Entities.Security.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;user id=daadmin;password=bObsp0ng;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <contexts>
@@ -56,6 +58,7 @@
     <add key="BingApiPassword" value="agentdan" />
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
+
     <add key="AdRollUsername" value="portal@directagents.com" />
     <add key="AdRollPassword" value="dir3ct@pi!" />
     <add key="GoogleAPI_Certificate" value="C:\DA\portal\API\271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
@@ -70,8 +73,8 @@
     <add key="FacebookApiVersion" value="2.10" />
     <add key="FB_DailyStatsOnly" value="942394955820248,101672655" /><!-- Glamsquad,Zeel -->
     <add key="FB_ConversionsAsMobileAppInstalls" value="1641397412783742,101672655,1618450965145197,1422222644472180,171116086713616" /><!-- Didit,Zeel,Pongalo,PEN,Nosey -->
-    <add key="FB_ConversionsAsPurchases" value="105894915,169435073491736,10153692856642557,1389007494496139,1414035381993350,1414037158659839,1414039745326247" />
-    <!-- Pimsleur,CovenantHouse,Catbird, Eaglemoss-(STGraphicNovel,StarTrekRegularShips,WalkingDead,eCommerceShop) -->
+    <add key="FB_ConversionsAsPurchases" value="225275271232242,105894915,169435073491736,10153692856642557,1389007494496139,1414035381993350,1414037158659839,1414039745326247" />
+    <!-- BritBox,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(STGraphicNovel,StarTrekRegularShips,WalkingDead,eCommerceShop) -->
     <add key="FB_ConversionsAsRegistrations" value="764183110401682" /><!-- FirstLook -->
     <add key="FB_ConversionsAsVideoPlays" value="445900432262095" /><!-- M2M -->
     <add key="FB_7d_click" value="127272435" /><!-- Jackson Galaxy -->
