--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -10,6 +10,7 @@
     <!--<add name="ClientPortalProgContext" connectionString="data source=.;initial catalog=DirectAgentsTest;user id=sauser;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.91,1433;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -20,6 +21,9 @@
     <add name="ClientPortalProgContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <!--<add name="ClientPortalProgContext" connectionString="data source=173.204.123.91,1433;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+    <add name="ClientPortalSearchContext" connectionString="data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="ClientPortalSearchContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="ClientPortalSearchContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
     <add name="RevTrackContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="ABContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 
@@ -156,8 +160,8 @@
     <add key="FacebookApiVersion" value="2.10" />
     <add key="FB_DailyStatsOnly" value="942394955820248,101672655" /><!-- Glamsquad,Zeel -->
     <add key="FB_ConversionsAsMobileAppInstalls" value="1641397412783742,101672655,1618450965145197,1422222644472180,171116086713616" /><!-- Didit,Zeel,Pongalo,PEN,Nosey -->
-    <add key="FB_ConversionsAsPurchases" value="105894915,169435073491736,10153692856642557,1389007494496139,1414035381993350,1414037158659839,1414039745326247" />
-    <!-- Pimsleur,CovenantHouse,Catbird, Eaglemoss-(STGraphicNovel,StarTrekRegularShips,WalkingDead,eCommerceShop) -->
+    <add key="FB_ConversionsAsPurchases" value="225275271232242,105894915,169435073491736,10153692856642557,1389007494496139,1414035381993350,1414037158659839,1414039745326247" />
+    <!-- BritBox,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(STGraphicNovel,StarTrekRegularShips,WalkingDead,eCommerceShop) -->
     <add key="FB_ConversionsAsRegistrations" value="764183110401682" /><!-- FirstLook -->
     <add key="FB_ConversionsAsVideoPlays" value="445900432262095" /><!-- M2M -->
     <add key="FB_7d_click" value="127272435" /><!-- Jackson Galaxy -->
