--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -129,6 +129,9 @@
     <add key="AdRollUsername" value="portal@directagents.com" />
     <add key="AdRollPassword" value="dir3ct@pi!" />
 
+    <add key="GoogleAPI_ClientId" value="960492209499.apps.googleusercontent.com" />
+    <add key="GoogleAPI_ClientSecret" value="YQm_OT5fK7kRARqJnfzmgukv" />
+
     <add key="GoogleAPI_Certificate" value="271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
     <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
 
