--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Entities\Cake\Camp.cs" />
     <Compile Include="Entities\Cake\CampSum.cs" />
     <Compile Include="Entities\Cake\Contact.cs" />
+    <Compile Include="Entities\Cake\EventConversion.cs" />
     <Compile Include="Entities\Cake\Offer.cs" />
     <Compile Include="Contexts\DAContext.cs" />
     <Compile Include="Entities\Cake\OfferContract.cs" />
@@ -573,6 +574,10 @@
     <Compile Include="Migrations\201706212054345_Mig_CampSumFKs.Designer.cs">
       <DependentUpon>201706212054345_Mig_CampSumFKs.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803281659222_Mig_EventConversion.cs" />
+    <Compile Include="Migrations\201803281659222_Mig_EventConversion.Designer.cs">
+      <DependentUpon>201803281659222_Mig_EventConversion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seed\ABSeeder.cs" />
@@ -883,6 +888,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706212054345_Mig_CampSumFKs.resx">
       <DependentUpon>201706212054345_Mig_CampSumFKs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803281659222_Mig_EventConversion.resx">
+      <DependentUpon>201803281659222_Mig_EventConversion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
