--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -120,7 +120,10 @@
     <add key="CriteoAppToken_MacMemory" value="8904347534213924864" />
     <add key="CriteoUsername_OriginalJuan" value="originaljuan_api" />
     <add key="CriteoAppToken_OriginalJuan" value="5612285344152197120" />
-    <add key="CriteoPassword" value="Folica.Criteo.2013" />
+    <add key="CriteoUsername_Wacoal" value="portal@directagents.com" />
+    <add key="CriteoAppToken_Wacoal" value="6553398001230331904" />
+    <!--<add key="CriteoPassword" value="Folica.Criteo.2013" />-->
+    <add key="CriteoPassword" value="Dir3ct@pi!" />
     <add key="CriteoSource" value="DirectAgents-ClientPortal-1" />
 
     <add key="LocalConnexUsername" value="Portal@directagents.com" />
