misc/config updates

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -166,8 +166,8 @@
     <add key="FacebookApiVersion" value="2.10" />
     <add key="FB_DailyStatsOnly" value="942394955820248,101672655" /><!-- Glamsquad,Zeel -->
     <add key="FB_ConversionsAsMobileAppInstalls" value="1641397412783742,101672655,1618450965145197,1422222644472180,171116086713616" /><!-- Didit,Zeel,Pongalo,PEN,Nosey -->
-    <add key="FB_ConversionsAsPurchases" value="225275271232242,426158207810613,105894915,169435073491736,10153692856642557,1414035381993350,1414039745326247,1727992100597675,1553661551364065,1619291268134426,1584684654928421" />
-    <!-- BritBoxUs,BritBoxCA,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(StarTrekRegularShips,eCommerceShop,Batmobile,Delorean,Discovery,XL) -->
+    <add key="FB_ConversionsAsPurchases" value="336866250052482,535516099919912,225275271232242,426158207810613,105894915,169435073491736,10153692856642557,1414035381993350,1414039745326247,1727992100597675,1553661551364065,1619291268134426,1584684654928421" />
+    <!-- Wacoal,LendKey,BritBoxUs,BritBoxCA,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(StarTrekRegularShips,eCommerceShop,Batmobile,Delorean,Discovery,XL) -->
     <add key="FB_ConversionsAsRegistrations" value="764183110401682" /><!-- FirstLook -->
     <add key="FB_ConversionsAsVideoPlays" value="445900432262095" /><!-- M2M -->
     <add key="FB_7d_click" value="127272435" /><!-- Jackson Galaxy -->
