--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Areas\ProgAdmin\Controllers\EmployeesController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\ExtraItemsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\MainController.cs" />
+    <Compile Include="Areas\ProgAdmin\Controllers\MaintenanceController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\PlatColMappingsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\PlatformBudgetInfosController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\PlatformsController.cs" />
@@ -1104,6 +1105,8 @@
     <Content Include="Areas\SearchAdmin\Views\SearchAccounts\Edit.cshtml" />
     <Content Include="Areas\SearchAdmin\Views\StatsGauges\Index.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\ExtAccounts\CreateGroup.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\Maintenance\Index.cshtml" />
+    <Content Include="Areas\SearchAdmin\Views\SearchProfiles\IndexGauge.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
