Criteo- sync via web

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -15,7 +15,6 @@
     <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <add name="ClientPortalProgContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <!--<add name="ClientPortalProgContext" connectionString="data source=173.204.123.91,1433;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
     <add name="ClientPortalSearchContext" connectionString="data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <!--<add name="ClientPortalSearchContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
@@ -69,6 +68,11 @@
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
 
+    <add key="CriteoUsername_Wacoal" value="portal@directagents.com" />
+    <add key="CriteoAppToken_Wacoal" value="6553398001230331904" />
+    <add key="CriteoPassword" value="Dir3ct@pi!" />
+    <add key="CriteoSource" value="DirectAgents-ClientPortal-1" />
+
     <add key="AdRollUsername" value="portal@directagents.com" />
     <add key="AdRollPassword" value="dir3ct@pi!" />
     <add key="GoogleAPI_Certificate" value="C:\DA\portal\API\271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
@@ -115,6 +119,20 @@
     <add key="AdformClientSecret_Alt1" value="s4WManLlRkkXbjWPv_YUPGnd0bv-gFha9JScGDVV" />
     <add key="AdformBaseUrl" value="https://api.adform.com" />
   </appSettings>
+
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="CriteoAdvertiserAPISoap" sendTimeout="00:02:00" maxReceivedMessageSize="100100">
+          <security mode="Transport" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://advertising.criteo.com/API/v201010/AdvertiserService.asmx" binding="basicHttpBinding" bindingConfiguration="CriteoAdvertiserAPISoap" contract="CriteoAPI.CriteoAdvertiserAPISoap" name="CriteoAdvertiserAPISoap" />
+    </client>
+  </system.serviceModel>
+
   <!--Note: In order for this to work, need to use the Configuration Manager in IIS and unlock the sections for anonymous/windowsAuthentication. -->
   <location path="stats">
     <system.webServer>
