--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -9,9 +9,12 @@
   <connectionStrings>
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=readonlyuser1;Password=570bro@dw@y;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="ClientPortalProgContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    <add name="ClientPortalSearchContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=readonlyuser1;Password=570bro@dw@y;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DAstaging;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <!--<add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+    <add name="ClientPortalSearchContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DAstaging;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <!--<add name="ClientPortalSearchContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
@@ -151,8 +154,8 @@
     <add key="FacebookApiVersion" value="3.0" />
     <add key="FB_DailyStatsOnly" value="942394955820248,101672655" /><!-- Glamsquad,Zeel -->
     <add key="FB_ConversionsAsMobileAppInstalls" value="1422222644472180" /><!-- PEN -->
-    <add key="FB_ConversionsAsPurchases" value="336866250052482,535516099919912,225275271232242,426158207810613,105894915,169435073491736,10153692856642557,1414035381993350,1414039745326247,1727992100597675,1553661551364065,1619291268134426,1584684654928421,1727998417263710,1556327834430770,1802911503105734" />
-    <!-- Wacoal,LendKey,BritBoxUs,BritBoxCA,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(StarTrekRegularShips,eCommerceShop,Batmobile,Delorean,Discovery,XL,DCAllStars,DCBusts,Subscription) -->
+    <add key="FB_ConversionsAsPurchases" value="347263619,336866250052482,535516099919912,225275271232242,426158207810613,105894915,169435073491736,10153692856642557,1414035381993350,1414039745326247,1727992100597675,1553661551364065,1619291268134426,1584684654928421,1727998417263710,1556327834430770,1802911503105734" />
+    <!-- Halcraft,Wacoal,LendKey,BritBoxUs,BritBoxCA,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(StarTrekRegularShips,eCommerceShop,Batmobile,Delorean,Discovery,XL,DCAllStars,DCBusts,Subscription) -->
     <add key="FB_ConversionsAsRegistrations" value="764183110401682" /><!-- FirstLook -->
     <add key="FB_ConversionsAsVideoPlays" value="445900432262095" /><!-- M2M -->
     <add key="FB_7d_click" value="127272435" /><!-- Jackson Galaxy -->
