Employees- show advertiser assignments

--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -1109,6 +1109,7 @@
     <Content Include="Areas\SearchAdmin\Views\SearchProfiles\IndexGauge.cshtml" />
     <Content Include="Areas\SearchAdmin\Views\SearchProfiles\Show.cshtml" />
     <Content Include="Areas\SearchAdmin\Views\SearchProfiles\ConvTypes.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\Employees\Show.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
