--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -1127,6 +1127,7 @@
     <None Include="Properties\PublishProfiles\dagents - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\dagents - Web Deploy.pubxml" />
     <Content Include="Views\ClientReports\Index.cshtml" />
+    <None Include="Properties\PublishProfiles\dagents__dev.pubxml" />
     <None Include="Properties\PublishProfiles\dagents__staging.pubxml" />
   </ItemGroup>
   <PropertyGroup>
