--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -154,8 +154,8 @@
     <add key="FacebookApiVersion" value="3.0" />
     <add key="FB_DailyStatsOnly" value="942394955820248,101672655" /><!-- Glamsquad,Zeel -->
     <add key="FB_ConversionsAsMobileAppInstalls" value="1422222644472180" /><!-- PEN -->
-    <add key="FB_ConversionsAsPurchases" value="347263619,336866250052482,535516099919912,225275271232242,426158207810613,105894915,169435073491736,10153692856642557,1414035381993350,1414039745326247,1727992100597675,1553661551364065,1619291268134426,1584684654928421,1727998417263710,1556327834430770,1802911503105734" />
-    <!-- Halcraft,Wacoal,LendKey,BritBoxUs,BritBoxCA,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(StarTrekRegularShips,eCommerceShop,Batmobile,Delorean,Discovery,XL,DCAllStars,DCBusts,Subscription) -->
+    <add key="FB_ConversionsAsPurchases" value="347263619,336866250052482,535516099919912,225275271232242,426158207810613,105894915,169435073491736,10153692856642557,1414035381993350,1414039745326247,1727992100597675,1553661551364065,1619291268134426,1584684654928421,1727998417263710,1556327834430770,1802911503105734,270367453533374,1783970671666484,1783967051666846" />
+    <!-- Halcraft,Wacoal,LendKey,BritBoxUs,BritBoxCA,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(StarTrekRegularShips,eCommerceShop,Batmobile,Delorean,Discovery,XL,DCAllStars,DCBusts,Subscription,BattlestarGal,DisneyAn,KnitStich) -->
     <add key="FB_ConversionsAsRegistrations" value="764183110401682" /><!-- FirstLook -->
     <add key="FB_ConversionsAsVideoPlays" value="445900432262095" /><!-- M2M -->
     <add key="FB_7d_click" value="127272435" /><!-- Jackson Galaxy -->
