--- a/1/EomTool/EomToolWeb/packages.config
+++ b/1/EomTool/EomToolWeb/packages.config
@@ -22,11 +22,12 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Moq" version="4.0.10827" targetFramework="net40" />
-  <package id="morelinq" version="1.0.16006" targetFramework="net452" />
+  <package id="morelinq" version="2.10.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
   <package id="Ninject.Extensions.Interception" version="3.3.0" targetFramework="net452" />
   <package id="System.Linq.Dynamic.Library" version="1.1.14" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
   <package id="TinyMCE" version="3.4.7" targetFramework="net40" />
   <package id="TinyMCE.jQuery" version="3.4.7" targetFramework="net40" />
   <package id="TinyMCE.MVC.JQuery" version="3.4.7" targetFramework="net40" />
