--- a/3/CakeExtracter.ConsoleApplication/packages.config
+++ b/3/CakeExtracter.ConsoleApplication/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
-  <package id="ManyConsole" version="0.4.2.16" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
+  <package id="ManyConsole" version="1.0.0.4" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
-  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.3" targetFramework="net45" />
-  <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="2.0.0" targetFramework="net452" />
+  <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
 </packages>
