--- a/3/ClientPortal.Data/packages.config
+++ b/3/ClientPortal.Data/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="6.1.0.133" targetFramework="net45" />
-  <package id="morelinq" version="1.0.16006" targetFramework="net45" />
+  <package id="morelinq" version="2.10.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
